--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.0.0",
     "react": "^16.14.0",
+    "react-content-loader": "^5.1.3",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
